Fix search bar spacing on PWA title bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -365,7 +365,7 @@ a {
 
 .window-controls-overlay .autocomplete {
   position: fixed;
-  padding-top: 1px;
+  padding-top: 2px;
   padding-right: 2px;
   left: env(titlebar-area-x, 0);
   top: env(titlebar-area-y, 0);
